@@ -419,8 +419,8 @@ void Palette_edit::drag_data_get
 	cout << "Setting selection data (" << shinfo.shapenum <<
 			'/' << shinfo.framenum << ')' << endl;
 					// Make us owner of xdndselection.
-	gtk_selection_owner_set(widget, gdk_atom_intern("XdndSelection", 0),
-								time);
+	//gtk_selection_owner_set(widget, gdk_atom_intern("XdndSelection", 0),
+	//							time);
 					// Set data.
 	gtk_selection_data_set(seldata,
 			gdk_atom_intern(U7_TARGET_SHAPEID_NAME, 0),
